--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.24",
+        "knuckleswtf/scribe": "^5.0",
         "laravel-lang/lang": "^15.13",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
