--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.24",
-        "knuckleswtf/scribe": "^5.0",
+        "knuckleswtf/scribe": "4.x-dev",
         "laravel-lang/lang": "^15.13",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
