--- a/.scribe/endpoints.cache/02.yaml
+++ b/.scribe/endpoints.cache/02.yaml
@@ -35,9 +35,10 @@ endpoints:
               {
                 "id": 1,
                 "title": "Análisis del mercado",
-                "description": "Detalles del análisis",
-                "created_at": "2025-02-21 14:00:00",
-                "updated_at": "2025-02-21 15:00:00"
+               "content": => "Contenido del analisis que hemos creado anteriormente",
+               "score": => "75"
+               "console": => "Xbox"
+               "type": => "Review"
               }
             ]
           }
